# EECE7120-repo

./: README.md  pub_and_sub_example.py
EECE7120_repo_hw2/: CMakeLists.txt  package.xml
EECE7120_repo_hw2/launch/: hw2.launch
EECE7120_repo_hw2/msg/: hw2.msg
EECE7120_repo_hw2/script/: node1.py  node2.py  node3.py
EECE7120_repo_hw2/src/: node1.py
EECE7120_repo_odom/: CMakeLists.txt  package.xml
EECE7120_repo_odom/launch/: hw6_odom.launch
EECE7120_repo_odom/src/: odom_calc.py  wheel_tick_pub.py
hw7/: color_and_line.py
hw8/: color_and_line.py
mp2/: Dockerfile
mp2/mp2_part1/: CMakeLists.txt  package.xml
mp2/mp2_part1/launch/: open_loop.launch  start_driving.launch
mp2/mp2_part1/src/: open_loop.py
mp2/mp2_part2/: CMakeLists.txt  package.xml
mp2/mp2_part2/launch/: controller.launch  start_lane_following.launch
mp2/mp2_part2/src/: lane_controller_node.py
mp3/: 11duck.yaml  Dockerfile
mp3/mp3_lf/: CMakeLists.txt  package.xml
mp3/mp3_lf/launch/: indefine_navi.launch  lane_filter.launch
mp3/mp3_lf/src/: color_and_line.py
