<?xml version="1.0"?>
<package>
  <name>mp3_lf</name>
  <version>1.0.0</version>
  <description>mini_project3_pacakge</description>

  <maintainer email='Zenan_Zhu@student.uml.edu'>Zenan Zhu</maintainer>

  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


</package>
